Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74912

tst_QDebugMessageService::retrieveDebugOutput fails during qt5.git integration in '5.13' and '5.12.3'

XMLWordPrintable

    • macOS

      From build log:

      agent:2019/04/02 14:46:22 build.go:192: ********* Start testing of tst_QDebugMessageService *********
      agent:2019/04/02 14:46:22 build.go:192: Config: Using QtTest library 5.13.0, Qt 5.13.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 10.0.0 (clang-1000.11.45.5) (Apple))
      agent:2019/04/02 14:46:22 build.go:192: PASS : tst_QDebugMessageService::initTestCase()
      agent:2019/04/02 14:46:22 build.go:192: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() An error occurred while waiting for debug process to become available:
      agent:2019/04/02 14:46:22 build.go:192: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Process failed to start.
      agent:2019/04/02 14:46:22 build.go:192: QWARN : tst_QDebugMessageService::retrieveDebugOutput() QML Debug Client: Could not launch app "/Users/qt/work/install/bin/qml.app/Contents/MacOS/qml" : "execve: Permission denied"
      agent:2019/04/02 14:46:22 build.go:192: QWARN : tst_QDebugMessageService::retrieveDebugOutput() Could not start up "/Users/qt/work/install/bin/qml.app/Contents/MacOS/qml"
      agent:2019/04/02 14:46:22 build.go:192: FAIL! : tst_QDebugMessageService::retrieveDebugOutput() Compared values are not the same
      agent:2019/04/02 14:46:22 build.go:192: Loc: [tst_qdebugmessageservice.cpp(140)]
      agent:2019/04/02 14:46:22 build.go:192: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Process State: "not running, return value 255"
      agent:2019/04/02 14:46:22 build.go:192: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Application Output: ""
      agent:2019/04/02 14:46:22 build.go:192: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Connection State: "null"
      agent:2019/04/02 14:46:22 build.go:192: PASS : tst_QDebugMessageService::cleanupTestCase()
      agent:2019/04/02 14:46:22 build.go:192: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 11ms
      agent:2019/04/02 14:46:22 build.go:192: ********* Finished testing of tst_QDebugMessageService *********

       

      Build log: http://coin/coin/api/results/qt/qtdeclarative/688a0799e231815895129a1570134c3e216d04f4/MacOSMacOS_10_13x86_64MacOSMacOS_10_13x86_64Clangqtci-macos-10.13-x86_64-2-d07a7aDebugAndRelease_Release/50e6f39769835247ade94fdf6226d5a982c37d6c/test_1554216810/log.txt.gz

       

      Details: http://coin/coin/integration/qt/qt5/tasks/1554216804

      Tested changes (refs/builds/qtci/5.13/1554214093):
      https://codereview.qt-project.org/#/q/e58820ee65dfc11864e57168173a06563e03ed37,n,z Update Windows 10, MSVC 2015 and MSVC 2017
      https://codereview.qt-project.org/#/q/160a462eeac123159de5609d9b35b6ac7b1b883c,n,z Update submodules on '5.13' in qt5

        For Gerrit Dashboard: QTBUG-74912
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes